# agent-template

./: .env.example  .gitignore  README.md  backend_main.py  pyproject.toml  requirements.txt  依赖清单对比差异.md
backend/: .env.example  backend_main.py  pyproject.toml
backend/applications/agent/: __init__.py  dependencies.py
backend/applications/base/: dependencies.py
backend/applications/conversation/: dependencies.py
backend/applications/example/: dependencies.py
backend/applications/knowledge_base/: dependencies.py
backend/applications/model_config/: dependencies.py
backend/applications/task_center/: task_presets.py
backend/applications/user/: dependencies.py
backend/celery_scheduler/: celery_base.py  celery_worker.py
backend/celery_scheduler/tasks/: task_dispatch.py
backend/configure/: __init__.py  logging_config.py  project_config.py  rag_config.py
backend/core/chroma_db/: chroma.sqlite3
backend/core/exceptions/: base_exceptions.py  http_exceptions.py
backend/core/initializations/: app_initialization.py  data_initialization.py
backend/core/middlewares/: app_middleware.py  auth_middleware.py  request_context_middleware.py
backend/core/rag_db/: rag_system.db  rag_system.db-shm  rag_system.db-wal
backend/core/responses/: base_response.py  http_response.py
backend/enums/: __init__.py  chat_session_enum.py  http_enum.py
backend/output/docs/: CHAT_KB_SELECTION.md  PROJECT_GUIDE.md  RAG_RETRIEVAL_QUALITY.md  __init__.py
backend/output/upload/: __init__.py
backend/services/: convert_to_md.py  dependency.py  rag_auth.py  rag_security.py
(+171 files in other folders)
