[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.8.1",
    "aiofiles==22.1.0",
    "chromadb==1.5.9",
    "fastapi==0.115.6",
    "gunicorn==26.0.0",
    "langchain==0.3.30",
    "langchain-community>=0.3.27",
    "onnxruntime==1.19.2",
    "passlib>=1.7.4",
    "pydantic[email]==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "pyjwt==2.9.0",
    "pymupdf>=1.27.2.3",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.30",
    "setuptools==72.1.0",
    "sse-starlette>=3.0.3",
    "tortoise-orm>=1.1.7",
    "uvloop==0.21.0",
    "email-validator==2.2.0",
    "aiomysql==0.2.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
]
